--- a/configuration/partials/page-title.hbs
+++ b/configuration/partials/page-title.hbs
@@ -3,24 +3,24 @@
 {{~#ifAny @root.route.metaData.title @root.route.metaData.adminTitle ~}}
 {{~#if @root.route.metaData.adminTitle ~}}
 {{@root.route.metaData.adminTitle}}
-{{#compare location "head" ~}} – Saltire Awards{{~/compare ~}}
+{{#compare location "head" ~}} – {{@root.context.metaData.title}}{{~/compare ~}}
 {{else}}
 {{~#if @root.route.metaData.title ~}}
 {{@root.route.metaData.title}}
-{{#compare location "head" ~}} – Saltire Awards{{~/compare ~}}
+{{#compare location "head" ~}} – {{@root.context.metaData.title}}{{~/compare ~}}
 {{~/if ~}}
 {{~/if ~}}
 {{else}}
-{{#compare location "head"}}Saltire Awards – celebrating youth volunteering in Scotland{{else}}Celebrating youth volunteering in Scotland{{/compare ~}}
+{{#compare location "head"}}{{@root.context.metaData.title}} – {{@root.context.metaData.tagline}}{{else}}{{@root.context.metaData.tagline}}{{/compare ~}}
 {{~/ifAny~}}
 {{else}}
 {{~#compare @root.route.metaData.title "Home" ~}}
-{{#compare location "head"}}Saltire Awards – celebrating youth volunteering in Scotland{{else}}Celebrating youth volunteering in Scotland{{/compare ~}}
+{{#compare location "head"}}{{@root.context.metaData.title}} – {{@root.context.metaData.tagline}}{{else}}{{@root.context.metaData.tagline}}{{/compare ~}}
 {{else}}
 {{~#if @root.route.metaData.title ~}}
-{{@root.route.metaData.title}}{{#compare location "head"}} – Saltire Awards{{/compare ~}}
+{{@root.route.metaData.title}}{{#compare location "head"}} – {{@root.context.metaData.title}}{{/compare ~}}
 {{else}}
-{{#compare location "head"}}Saltire Awards – celebrating youth volunteering in Scotland{{else}}Celebrating youth volunteering in Scotland{{/compare ~}}
+{{#compare location "head"}}{{@root.context.metaData.title}} – {{@root.context.metaData.tagline}}{{else}}{{@root.context.metaData.tagline}}{{/compare ~}}
 {{~/if~}}
 {{~/compare ~}}
 {{~/if ~}}
@@ -28,7 +28,7 @@
 {{~#if @root.data.primaryResponse.hits.hits.[0] ~}}
 {{~#with @root.data.primaryResponse.hits.hits.[0]._source ~}}
 {{~#if title ~}}
-{{{title}}}{{~#compare ../location "head"}} – Saltire Awards{{/compare ~}}
+{{{title}}}{{~#compare ../location "head"}} – {{@root.context.metaData.title}}{{/compare ~}}
 {{else}}
 {{> route_title}}
 {{~/if ~}}
