--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -302,7 +302,7 @@
           <aside class="sidebar column col-2 col-lg-3 col-xl-3 hide-lg">
             {{{layoutParts.sidebar}}}
           </aside>
-          <main class="body column col-10 col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-9">
+          <main class="body column col-lg-auto">
             {{{layoutParts.body}}}
           </main>
         </div>
