--- a/configuration/templates/volunteering/hours-body.hbs
+++ b/configuration/templates/volunteering/hours-body.hbs
@@ -4,7 +4,8 @@
     {{#json}}
         {{{json key='task_id' value=task_id}}},
         {{{json key='verified' value=false}}},
-        {{{json key='hours' value=hours}}}
+        {{{json key='hours' value=hours}}},
+        {{{json key='notes' value=notes}}}
     {{/json}}
   {{/json}}
   {{/json}}
