--- a/configuration/templates/volunteering/hours.hbs
+++ b/configuration/templates/volunteering/hours.hbs
@@ -77,6 +77,9 @@
                 </strong>
               </label>
               <div class="input-group">
+                <input class="form-input input-lg" id="notes-{{task_id}}" name="notes" type="text" placeholder="add Notes">
+              </div>
+              <div class="input-group">
                 <input class="form-input input-lg" id="hours-{{task_id}}" name="hours" type="number" step="any" min="0" value="" placeholder="">
                 <button type="submit" class="btn btn-primary btn-lg input-group-btn">Add hours</button>
               </div>
