--- a/configuration/templates/admin/individual-hours-body.hbs
+++ b/configuration/templates/admin/individual-hours-body.hbs
@@ -5,6 +5,7 @@
       {{{json key='task_id' value=task_id}}},
       {{{json key='hours' value=hours}}},
       {{{json key='hours_id' value=hours_id}}},
+      {{{json key='notes' value=notes}}},
       {{#if claim_first_name }}{{{json key='claim_first_name' value=claim_first_name}}},{{/if}}
       {{#if claim_last_name }}{{{json key='claim_last_name' value=claim_last_name}}},{{/if}}
       {{#if claim_code }}{{{json key='claim_code' value=claim_code}}},{{/if}}
