--- a/src/main.scss
+++ b/src/main.scss
@@ -535,7 +535,7 @@ header,
 }
 
 .sidebar-not-present {
-  margin-top: -($unit);
+  margin-top: -($unit*1.5);
   .body .container {
     padding-top: $unit*2;
     padding-bottom: $unit*3;
@@ -968,6 +968,34 @@ footer {
 }
 
 @media screen and (max-width: 790px) {
+  html {
+    font-size: 18px;
+  }
+  .container {
+    padding: 0 $unit/2;
+  }
+  header {
+    .brand .logo {
+      zoom: .75;
+    }
+    .page-title {
+      clear: both;
+      padding: $unit/4 0 0;
+    }
+  }
+  h1 {
+    font-size: 1.4rem;
+  }
+  h2 {
+    font-size: 1.2rem;
+  }
+  h3 {
+    font-size: 1.1rem;
+  }
+  h4 {
+    font-size: 1rem;
+  }
+
   .table-condensed {
     margin-bottom: 0;
     border-top: 0;
