--- a/configuration/templates/page/home-not-authenticated.hbs
+++ b/configuration/templates/page/home-not-authenticated.hbs
@@ -78,12 +78,15 @@
     </div>
   </div>
   <div class="my-saltire columns t-margin-full">
-    <div class="column col-3"></div>
-    <div class="column col-3 my-saltire-item align-centre">
-      <a href="/sign-up" class="btn btn-primary text-centre">Sign up now</a>
-    </div>
-    <div class="column col-3 my-saltire-item align-centre">
-      <a href="/sign-in" class="btn text-centre">Sign in</a>
+    <div class="column col-sm-12 col-6 col-mx-auto">
+      <div class="columns">
+        <div class="column col-6 my-saltire-item align-centre">
+          <a href="/sign-up" class="btn btn-primary text-centre">Sign up now</a>
+        </div>
+        <div class="column col-6 my-saltire-item align-centre">
+          <a href="/sign-in" class="btn text-centre">Sign in</a>
+        </div>
+      </div>
     </div>
   </div>
 </div>
