--- a/configuration/templates/page/home-authenticated.hbs
+++ b/configuration/templates/page/home-authenticated.hbs
@@ -38,7 +38,7 @@
   </svg>
   <div class="container">
     <div class="columns">
-      <div class="column col-9">
+      <div class="column col-9 col-sm-12">
         <h3>
           Support &amp; information
         </h3>
@@ -48,7 +48,7 @@
         If you enter a postcode on your <a href="/settings">profile</a> you'll see local contact information here. Please see the <a href="/contact">contact us</a> page for all areas.
         {{/if ~}}
       </div>
-      <div class="column col-3 t-margin">
+      <div class="column col-3 col-sm-9 t-margin">
         {{> local_contact_logo}}
       </div>
     </div>
