--- a/configuration/templates/volunteering/groups.hbs
+++ b/configuration/templates/volunteering/groups.hbs
@@ -19,7 +19,7 @@
 
     <div class="columns cards equal-height">
       {{#each @root.data.tasksInfo ~}}
-      <div class="column col-4">
+      <div class="column col-4 col-sm-12 col-lg-6">
         <div class="card">
           <div class="card-header">
             <div class="card-title h5">
