wee display fix

--- a/configuration/templates/account/account.hbs
+++ b/configuration/templates/account/account.hbs
@@ -7,7 +7,7 @@
         {{> account_details_form_fields admin=(compare @root.data.accountInfo.user_type 'Group Admin')}}
 
         {{!-- This will probably have a captcha in it, hence the separation, and weird submit format --}}
-        <div class="columns">
+        <div class="columns h-padding">
           <div class="column col-3"></div>
           <div class="column col-2">
             <button id="detail-submit" class="btn btn-primary b-margin-full">
