home text change

--- a/configuration/templates/page/home-not-authenticated.hbs
+++ b/configuration/templates/page/home-not-authenticated.hbs
@@ -38,7 +38,6 @@
   <div class="columns certificates">
     <div class="column col-sm-6 col-3 certificate text-centre">
       {{> badge type='challenge'}}
-      {{!-- <img src="{{~>asset_url url='images/certificates/logos/challenge.png' ~}}" class="certificate-icon img-responsive b-margin" /> --}}
       <h4 class="t-margin-full">
         The Challenge
       </h4>
@@ -47,8 +46,7 @@
       </p>
     </div>
     <div class="column col-sm-6 col-3 certificate text-centre">
-      {{> badge type='approach' key='ten' hours='10'}}
-      {{!-- <img src="{{~>asset_url url='images/certificates/logos/approach.png' ~}}" class="certificate-icon img-responsive b-margin" /> --}}
+      {{> badge type='approach' key='twenty-five' hours='25'}}
       <h4 class="t-margin-full">
         The Approach
       </h4>
@@ -57,18 +55,16 @@
       </p>
     </div>
     <div class="column col-sm-6 col-3 certificate text-centre">
-      {{> badge type='ascent' key='fifty' hours='50'}}
-      {{!-- <img src="{{~>asset_url url='images/certificates/logos/ascent.png' ~}}" class="certificate-icon img-responsive b-margin" /> --}}
+      {{> badge type='ascent' key='one-hundred' hours='100'}}
       <h4 class="t-margin-full">
         The Ascent
       </h4>
       <p>
-        For when you've reached 50, 100, 200 or even 500 hours
+        For when you've reached 100, 200 or even 500 hours
       </p>
     </div>
     <div class="column col-sm-6 col-3 certificate text-centre">
       {{> badge type='summit'}}
-      {{!-- <img src="{{~>asset_url url='images/certificates/logos/summit.png' ~}}" class="certificate-icon img-responsive b-margin" /> --}}
       <h4 class="t-margin-full">
         The Summit
       </h4>
